# AlbedoHub

./: CMakeLists.txt  LICENSE  README.md
AlbedoHub_Client/: CMakeLists.txt  main.cc
AlbedoHub_Client/_core/: CMakeLists.txt  albedo_hub.h  albedo_hub_context.h  client.h  client_context.h  global_context.h  main.cc  startup.cc  startup.h
AlbedoHub_Client/_core/Net/: net_layer.h  net_layer_context.h
AlbedoHub_Client/_core/Net/handlers/register/: h_register.cc  h_register.h
AlbedoHub_Client/_core/UI/: ui_layer.h  ui_layer_context.h
AlbedoHub_Client/_core/UI/backend/: imgui_manager.cc  imgui_manager.h  load_image.cc  load_image.h
AlbedoHub_Client/_core/UI/include/: imgui_manager.h
AlbedoHub_Client/_core/UI/source/: imgui_manager.cc
AlbedoHub_Client/_core/UI/windows/: home.h  register.h  window.h  window_list.h
AlbedoHub_Client/_core/runtime/: runtime_events.cc  runtime_events.h
AlbedoHub_Client/_core/runtime/Net/: net.h  net_context.h
AlbedoHub_Client/_core/runtime/Net/handlers/: handler_list.h
AlbedoHub_Client/_core/runtime/Net/handlers/dock/: h_dock.cc  h_dock.h
AlbedoHub_Client/_core/runtime/Net/handlers/register/: h_register.cc  h_register.h
AlbedoHub_Client/_core/runtime/Net/handlers/signio/: h_signio.cc  h_signio.h
AlbedoHub_Client/_core/runtime/UI/: UI.h  UI_context.h
AlbedoHub_Client/_core/runtime/UI/backend/: image_loader.cc  image_loader.h  imgui_manager.cc  imgui_manager.h
AlbedoHub_Client/_core/runtime/UI/windows/: content.h  menu.h  title_bar.h  window.h  window_list.h
AlbedoHub_Client/_extern/: CMakeLists.txt
AlbedoHub_Client/_extern/imgui-1.89.5/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_tables.cpp
AlbedoHub_Client/_extern/imgui-1.89.5/backends/: imgui_impl_vulkan.h
AlbedoHub_Client/_extern/stb_image-2023-1-29/: CMakeLists.txt
AlbedoHub_Client/_extern/vulkanSDK/: CMakeLists.txt
AlbedoHub_Server/: CMakeLists.txt
AlbedoHub_Server/_core/: CMakeLists.txt  harbor.h  hub.h  main.cc  server.cc  server.h  server_context.h
AlbedoHub_Server/_core/database/: database.h
AlbedoHub_Server/_core/handlers/: handler.h  handler_list.h  handler_pool.h
AlbedoHub_Server/_core/handlers/dock/: h_dock.cc  h_dock.h
AlbedoHub_Server/_core/handlers/register/: h_register.cc  h_register.h  mail.h  register.mail.h
AlbedoHub_Server/_core/handlers/signio/: h_signio.cc  h_signio.h
AlbedoHub_Server/_core/service/database/: database.h  database_service.cc  database_service.h
AlbedoHub_Server/_core/service/database/tables/: authentication.h  user.h
AlbedoHub_Server/_core/service/mail/: mail_service.cc  mail_service.h
AlbedoHub_Server/_extern/: CMakeLists.txt
_common/: CMakeLists.txt
_common/JSON-nlohmann/: CMakeLists.txt
_common/protobuf-3.21.12/: CMakeLists.txt
_protocol/: AlbedoProtocol.proto  dock_protocol.proto  message.proto  register.proto  register_protocol.proto  signio_protocol.proto
_protocol/include/: AlbedoProtocol.pb.cc  AlbedoProtocol.pb.h  dock_protocol.pb.cc  dock_protocol.pb.h  message.pb.cc  message.pb.h  message_type.pb.cc  message_type.pb.h  register.pb.cc  register.pb.h  register_protocol.pb.cc  register_protocol.pb.h  signio_protocol.pb.cc  signio_protocol.pb.h
_script/: clientd.bat  serverd.bat  target_put_into_folder.cmake
