file(GLOB_RECURSE SERVER_CORE_HEADER "*.h")
file(GLOB_RECURSE SERVER_CORE_SOURCE "*.cc")

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SERVER_CORE_HEADER} ${SERVER_CORE_SOURCE})

add_executable(${PROJECT_NAME} 
    ${SERVER_CORE_HEADER}
    ${SERVER_CORE_SOURCE})

target_include_directories(${PROJECT_NAME}  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})