set(path_vulkanSDK ${CMAKE_CURRENT_SOURCE_DIR})
set(VULKAN_INCLUDE ${path_vulkanSDK}/include)

if(WIN32)
    set(VULKAN_LIB ${path_vulkanSDK}/lib/Win32/vulkan-1.lib)
    set(glslangValidator_executable ${path_vulkanSDK}/bin/Win32/glslangValidator.exe)
    add_compile_definitions("ALBEDO_VK_LAYER_PATH=${path_vulkanSDK}/bin/Win32")
elseif(UNIX)
    if(APPLE)
      set(VULKAN_LIB ${path_vulkanSDK}/lib/MacOS/libvulkan.1.dylib)
      set(glslangValidator_executable ${path_vulkanSDK}/bin/MacOS/glslangValidator)
      add_compile_definitions("ALBEDO_VK_LAYER_PATH=${path_vulkanSDK}/bin/MacOS")
      add_compile_definitions("ALBEDO_VK_ICD_FILENAMES=${path_vulkanSDK}/bin/MacOS/MoltenVK_icd.json")
    else()
      set(VULKAN_LIB ${path_vulkanSDK}/lib/Linux/libvulkan.so.1)
      set(glslangValidator_executable ${path_vulkanSDK}/bin/Linux/glslangValidator)
      add_compile_definitions("ALBEDO_VK_LAYER_PATH=${path_vulkanSDK}/bin/Linux")
    endif()
else()
  message(FATAL_ERROR "Unknown Platform")
endif()

file(GLOB VULKAN_INCLUDE_FILES ${VULKAN_INCLUDE}/vulkan/*.h)
add_library(vulkan INTERFACE ${VULKAN_INCLUDE_FILES})
target_link_libraries(vulkan INTERFACE ${VULKAN_LIB})
target_include_directories(vulkan INTERFACE ${VULKAN_INCLUDE})

